--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Happy Birthday M</title>
+    <title>Happy Birthday Matilda x</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌺</text></svg>">
 
     <script src="https://kit.fontawesome.com/1355750521.js" crossorigin="anonymous"></script>
 
@@ -45,7 +46,13 @@
 
     <div class="ticket-img-container">
         <div class="video-container">
-            <iframe class="video" src="https://www.youtube.com/embed/hu0zX7l-poU?si=kIM3AgyCtOwFktnL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe class="video"
+                src="https://www.youtube.com/embed/hu0zX7l-poU?autoplay=1&mute=1&loop=1&playlist=hu0zX7l-poU&playsinline=1&enablejsapi=1&si=kIM3AgyCtOwFktnL"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+            </iframe>
+
         </div>
         <p>Factory International</p>
         <p>Thursday 18th December</p>
@@ -58,7 +65,10 @@
         <i class="fa-solid fa-arrow-down scroll-arrow fa-5x"></i>
         <button class="calendar-button" id="calendarButton" onclick="addToCalendar()">Add to your Calendar 🎟️</button>
     </div>
-   
+
+    <div class="arrow-container">
+        <p>Love you, pretty x</p>
+    </div>
 
 
 
@@ -69,7 +79,8 @@
 
 
 
-   
+
+
 
 </body>
 
